--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "db": "prisma generate",
+    "env": "npx vercel env pull"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.2.3",
