--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "env": "npx vercel env pull"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.4",
     "@chakra-ui/react": "^2.2.3",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -20,22 +21,29 @@
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
+    "crypto-js": "^4.1.1",
     "framer-motion": "^6.4.3",
+    "lodash": "^4.17.21",
+    "loglevel": "^1.8.0",
+    "loglevel-plugin-prefix": "^0.8.4",
     "next": "12.2.0",
     "next-auth": "^4.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.1",
     "superjson": "^1.9.1",
     "zod": "^3.17.3"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "prettier": "^2.7.1",
     "prisma": "^4.0.0",
     "typescript": "4.7.4"
   }
