--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "studio": "prisma studio",
     "db-generate-client": "prisma generate",
     "db-update": "prisma db push",
     "fetch-env": "npx vercel env pull"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.4",
+    "@chakra-ui/modal": "^2.1.2",
     "@chakra-ui/react": "^2.2.3",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
