--- a/package.json
+++ b/package.json
@@ -50,5 +50,6 @@
     "eslint-config-next": "12.1.6",
     "prisma": "^4.0.0",
     "typescript": "4.7.4"
-  }
+  },
+  "postinstall": "prisma generate"
 }
