--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db-update": "prisma db push",
     "fetch-env": "npx vercel env pull"
   },
+  "prebuild": "prisma generate",
   "dependencies": {
     "@chakra-ui/icons": "^2.0.4",
     "@chakra-ui/modal": "^2.1.2",
@@ -50,6 +51,5 @@
     "eslint-config-next": "12.1.6",
     "prisma": "^4.0.0",
     "typescript": "4.7.4"
-  },
-  "postinstall": "prisma generate"
+  }
 }
