--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
     "crypto-js": "^4.1.1",
+    "formik": "^2.2.9",
     "framer-motion": "^6.4.3",
     "lodash": "^4.17.21",
     "loglevel": "^1.8.0",
@@ -40,6 +41,7 @@
     "react-icons": "^4.4.0",
     "react-query": "^3.39.1",
     "superjson": "^1.9.1",
+    "yup": "^0.32.11",
     "zod": "^3.17.3"
   },
   "devDependencies": {
@@ -49,7 +51,7 @@
     "@types/react-dom": "18.0.5",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
-    "prisma": "^4.0.0",
+    "prisma": "^4.1.0",
     "typescript": "4.7.4"
   }
 }
