--- a/package.json
+++ b/package.json
@@ -16,20 +16,21 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.4",
     "@chakra-ui/modal": "^2.1.2",
-    "@chakra-ui/react": "^2.2.3",
+    "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@fontsource/open-sans": "^4.5.10",
     "@fontsource/raleway": "^4.5.9",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.1.0",
+    "@saas-ui/react": "^1.1.2",
     "@trpc/client": "^9.25.3",
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
     "crypto-js": "^4.1.1",
     "formik": "^2.2.9",
-    "framer-motion": "^6.4.3",
+    "framer-motion": "^6.5.1",
     "lodash": "^4.17.21",
     "loglevel": "^1.8.0",
     "loglevel-plugin-prefix": "^0.8.4",
