MySQL lcoal setup & debug setup & uninvoiced time

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "studio": "prisma studio",
     "db-generate-client": "prisma generate",
     "db-update": "prisma db push",
+    "reset-db": "prisma migration reset",
     "fetch-env": "npx vercel env pull"
   },
   "postinstall": "prisma generate",
