--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "seed-db": "npx prisma db seed",
     "fetch-env": "npx vercel env pull"
   },
-  "postinstall": "prisma generate",
+  "prebuild": "prisma generate",
   "dependencies": {
     "@chakra-ui/icons": "^2.0.4",
     "@chakra-ui/modal": "^2.1.2",
