--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "start": "next start",
     "lint": "next lint",
     "studio": "prisma studio",
-    "generate-client": "prisma generate",
+    "client-db": "prisma generate",
     "update-db": "prisma db push",
     "reset-db": "prisma migrate reset",
     "seed-db": "npx prisma db seed",
+    "hard-db": "prisma migrate reset && prisma db push && npx prisma db seed && prisma generate",
     "fetch-env": "npx vercel env pull"
   },
   "dependencies": {
