--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "jira.js": "^2.15.3",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "loglevel": "^1.8.0",
     "loglevel-plugin-prefix": "^0.8.4",
@@ -45,6 +46,7 @@
     "react-icons": "^4.4.0",
     "react-query": "^3.39.1",
     "superjson": "^1.9.1",
+    "xero-node": "^4.22.0",
     "yup": "^0.32.11",
     "zod": "^3.17.3"
   },
