--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@hookform/resolvers": "^2.9.6",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.1.0",
-    "@saas-ui/react": "^1.1.2",
+    "@saas-ui/pro": "^0.5.2",
+    "@saas-ui/react": "^1.2.1",
     "@trpc/client": "^9.25.3",
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
@@ -39,7 +40,7 @@
     "lodash": "^4.17.21",
     "loglevel": "^1.8.0",
     "loglevel-plugin-prefix": "^0.8.4",
-    "next": "12.2.0",
+    "next": "^12.2.3",
     "next-auth": "^4.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -52,11 +53,13 @@
     "zod": "^3.17.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.9",
     "@types/crypto-js": "^4.1.1",
     "@types/jira-client": "^7.1.4",
     "@types/node": "^18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/react-table": "^7.7.12",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "prisma": "^4.1.0",
