--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "@emotion/styled": "^11.9.3",
     "@fontsource/open-sans": "^4.5.10",
     "@fontsource/raleway": "^4.5.9",
-    "@hookform/resolvers": "^2.9.6",
+    "@hookform/resolvers": "^2.9.7",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.1.0",
     "@saas-ui/charts": "^0.2.1",
+    "@saas-ui/date-picker": "^0.3.1",
     "@saas-ui/pro": "^0.6.1",
     "@saas-ui/react": "^1.2.1",
     "@trpc/client": "^9.25.3",
