--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint",
     "pscale": "pscale connect billing-app --port 3309",
     "studio": "prisma studio",
-    "client-db": "prisma generate",
+    "generate-db": "prisma generate",
     "update-db": "prisma db push",
     "reset-db": "prisma migrate reset",
     "seed-db": "npx prisma db seed",
@@ -30,7 +30,7 @@
     "@fontsource/raleway": "^4.5.9",
     "@hookform/resolvers": "^2.9.7",
     "@next-auth/prisma-adapter": "^1.0.3",
-    "@prisma/client": "^4.1.0",
+    "@prisma/client": "^4.3.1",
     "@saas-ui/charts": "^0.2.1",
     "@saas-ui/date-picker": "^0.3.1",
     "@saas-ui/pro": "^0.9.0",
