--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
+    "apexcharts": "^3.35.5",
     "crypto-js": "^4.1.1",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
@@ -53,6 +54,7 @@
     "next-seo": "^5.5.0",
     "node-fetch": "^2.6.1",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
