--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fontsource/open-sans": "^4.5.10",
     "@fontsource/raleway": "^4.5.9",
     "@hookform/resolvers": "^2.9.7",
+    "@hubspot/api-client": "^7.1.2",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.3.1",
     "@saas-ui/charts": "^0.2.1",
