--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
-    "asana": "^1.0.0",
     "apexcharts": "^3.35.5",
+    "asana": "^1.0.0",
     "crypto-js": "^4.1.1",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
@@ -54,6 +54,7 @@
     "next-auth": "^4.9.0",
     "next-seo": "^5.5.0",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.7.8",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
@@ -71,6 +72,7 @@
     "@types/crypto-js": "^4.1.1",
     "@types/jira-client": "^7.1.4",
     "@types/node": "^18.0.0",
+    "@types/nodemailer": "^6.4.6",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/react-table": "^7.7.12",
