--- a/package.json
+++ b/package.json
@@ -50,14 +50,14 @@
     "loglevel": "^1.8.0",
     "loglevel-plugin-prefix": "^0.8.4",
     "moment": "^2.29.4",
-    "next": "^12.2.3",
+    "next": "^12.3.1",
     "next-auth": "^4.9.0",
     "next-seo": "^5.5.0",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.7.8",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.1",
