--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "loglevel": "^1.8.0",
     "loglevel-plugin-prefix": "^0.8.4",
     "moment": "^2.29.4",
-    "next": "^12.3.1",
-    "next-auth": "^4.9.0",
+    "next": "12.3.1",
+    "next-auth": "~4.10.3",
     "next-seo": "^5.5.0",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.7.8",
