--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "nodemailer": "^6.7.8",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-data-grid": "^7.0.0-beta.19",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
