--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "@chakra-ui/skip-nav": "^2.0.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@fontsource/open-sans": "^4.5.10",
-    "@fontsource/raleway": "^4.5.9",
+    "@fontsource/inter": "^4.5.11",
     "@hookform/resolvers": "^2.9.7",
     "@hubspot/api-client": "^7.1.2",
     "@next-auth/prisma-adapter": "^1.0.3",
