--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "@prisma/client": "^4.4.0",
     "@saas-ui/charts": "^0.2.1",
     "@saas-ui/date-picker": "^0.3.1",
-    "@saas-ui/pro": "^0.9.0",
-    "@saas-ui/react": "^1.4.0",
+    "@saas-ui/pro": "^0.10.0",
+    "@saas-ui/react": "^1.4.3",
+    "@saas-ui/sidebar": "^0.1.2",
     "@trpc/client": "^9.25.3",
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
