--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@fontsource/inter": "^4.5.11",
+    "@heroicons/react": "^2.0.12",
     "@hookform/resolvers": "^2.9.7",
     "@hubspot/api-client": "^7.1.2",
     "@next-auth/prisma-adapter": "^1.0.3",
