--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-icons": "^4.4.0",
     "react-query": "^3.39.1",
     "superjson": "^1.9.1",
+    "swiper": "^8.4.3",
     "xero-node": "^4.22.0",
     "yup": "^0.32.11",
     "zod": "^3.17.3",
