--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "immer": "^9.0.15",
+    "javascript-time-ago": "^2.5.7",
     "jira.js": "^2.15.3",
     "lodash": "^4.17.21",
     "loglevel": "^1.8.0",
@@ -64,6 +65,7 @@
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.1",
+    "react-time-ago": "^7.2.1",
     "superjson": "^1.9.1",
     "xero-node": "^4.22.0",
     "yup": "^0.32.11",
